[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/models/railkill/button/button.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/models/railkill/button/button_base.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/controls/button.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/controls/switch_01.ogg" type="AudioStream" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 2.2
height = 0.5

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 0, -1.2627, -3, 2.1213, 0.6486, -2.1213, 0, 0.6486, -3, 0, -1.2627, -3, 2.1213, -1.2627, -2.1213, 2.1213, 0.6486, -2.1213, 2.1213, -1.2627, -2.1213, 3, 0.6486, 0, 2.1213, 0.6486, -2.1213, 2.1213, -1.2627, -2.1213, 3, -1.2627, 0, 3, 0.6486, 0, 3, -1.2627, 0, 2.1213, 0.6486, 2.1213, 3, 0.6486, 0, 3, -1.2627, 0, 2.1213, -1.2627, 2.1213, 2.1213, 0.6486, 2.1213, 2.1213, -1.2627, 2.1213, 0, 0.6486, 3, 2.1213, 0.6486, 2.1213, 2.1213, -1.2627, 2.1213, 0, -1.2627, 3, 0, 0.6486, 3, 0, -1.2627, 3, -2.1213, 0.6486, 2.1213, 0, 0.6486, 3, 0, -1.2627, 3, -2.1213, -1.2627, 2.1213, -2.1213, 0.6486, 2.1213, -2.1213, -1.2627, 2.1213, -3, 0.6486, 0, -2.1213, 0.6486, 2.1213, -2.1213, -1.2627, 2.1213, -3, -1.2627, 0, -3, 0.6486, 0, 3, 0.6486, 0, 1.8305, 0.6486, -1.8305, 2.1213, 0.6486, -2.1213, 3, 0.6486, 0, 2.5887, 0.6486, 0, 1.8305, 0.6486, -1.8305, -3, -1.2627, 0, -2.1213, 0.6486, -2.1213, -3, 0.6486, 0, -3, -1.2627, 0, -2.1213, -1.2627, -2.1213, -2.1213, 0.6486, -2.1213, -2.1213, -1.2627, -2.1213, 0, 0.6486, -3, -2.1213, 0.6486, -2.1213, -2.1213, -1.2627, -2.1213, 0, -1.2627, -3, 0, 0.6486, -3, 0, 0.6486, 2.5887, 1.8305, -0.2701, 1.8305, 1.8305, 0.6486, 1.8305, 0, 0.6486, 2.5887, 0, -0.2701, 2.5887, 1.8305, -0.2701, 1.8305, -2.1213, 0.6486, 2.1213, 0, 0.6486, 2.5887, 0, 0.6486, 3, -2.1213, 0.6486, 2.1213, -1.8305, 0.6486, 1.8305, 0, 0.6486, 2.5887, 0, 0.6486, -3, -1.8305, 0.6486, -1.8305, -2.1213, 0.6486, -2.1213, 0, 0.6486, -3, 0, 0.6486, -2.5887, -1.8305, 0.6486, -1.8305, 2.1213, 0.6486, -2.1213, 0, 0.6486, -2.5887, 0, 0.6486, -3, 2.1213, 0.6486, -2.1213, 1.8305, 0.6486, -1.8305, 0, 0.6486, -2.5887, 2.1213, 0.6486, 2.1213, 2.5887, 0.6486, 0, 3, 0.6486, 0, 2.1213, 0.6486, 2.1213, 1.8305, 0.6486, 1.8305, 2.5887, 0.6486, 0, -3, 0.6486, 0, -1.8305, 0.6486, 1.8305, -2.1213, 0.6486, 2.1213, -3, 0.6486, 0, -2.5887, 0.6486, 0, -1.8305, 0.6486, 1.8305, 0, 0.6486, 3, 1.8305, 0.6486, 1.8305, 2.1213, 0.6486, 2.1213, 0, 0.6486, 3, 0, 0.6486, 2.5887, 1.8305, 0.6486, 1.8305, -2.1213, 0.6486, -2.1213, -2.5887, 0.6486, 0, -3, 0.6486, 0, -2.1213, 0.6486, -2.1213, -1.8305, 0.6486, -1.8305, -2.5887, 0.6486, 0, 2.5887, 0.6486, 0, 1.8305, -0.2701, -1.8305, 1.8305, 0.6486, -1.8305, 2.5887, 0.6486, 0, 2.5887, -0.2701, 0, 1.8305, -0.2701, -1.8305, -1.8305, 0.6486, -1.8305, -2.5887, -0.2701, 0, -2.5887, 0.6486, 0, -1.8305, 0.6486, -1.8305, -1.8305, -0.2701, -1.8305, -2.5887, -0.2701, 0, -1.8305, 0.6486, 1.8305, 0, -0.2701, 2.5887, 0, 0.6486, 2.5887, -1.8305, 0.6486, 1.8305, -1.8305, -0.2701, 1.8305, 0, -0.2701, 2.5887, 1.8305, 0.6486, 1.8305, 2.5887, -0.2701, 0, 2.5887, 0.6486, 0, 1.8305, 0.6486, 1.8305, 1.8305, -0.2701, 1.8305, 2.5887, -0.2701, 0, 1.8305, 0.6486, -1.8305, 0, -0.2701, -2.5887, 0, 0.6486, -2.5887, 1.8305, 0.6486, -1.8305, 1.8305, -0.2701, -1.8305, 0, -0.2701, -2.5887, 0, 0.6486, -2.5887, -1.8305, -0.2701, -1.8305, -1.8305, 0.6486, -1.8305, 0, 0.6486, -2.5887, 0, -0.2701, -2.5887, -1.8305, -0.2701, -1.8305, -2.5887, 0.6486, 0, -1.8305, -0.2701, 1.8305, -1.8305, 0.6486, 1.8305, -2.5887, 0.6486, 0, -2.5887, -0.2701, 0, -1.8305, -0.2701, 1.8305, 2.5887, -0.2701, 0, 0, -0.2701, -2.5887, 1.8305, -0.2701, -1.8305, 0, -0.2701, -2.5887, -2.5887, -0.2701, 0, -1.8305, -0.2701, -1.8305, -2.5887, -0.2701, 0, 0, -0.2701, 2.5887, -1.8305, -0.2701, 1.8305, 0, -0.2701, 2.5887, 2.5887, -0.2701, 0, 1.8305, -0.2701, 1.8305, 2.5887, -0.2701, 0, -2.5887, -0.2701, 0, 0, -0.2701, -2.5887, -2.5887, -0.2701, 0, 2.5887, -0.2701, 0, 0, -0.2701, 2.5887 )

[sub_resource type="CylinderShape" id=3]
radius = 2.4
height = 6.0

[node name="ButtonCircle" type="Spatial"]

[node name="RigidBody" type="RigidBody" parent="."]
collision_layer = 16
collision_mask = 18
gravity_scale = 0.0
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 3 )

[node name="Clicker" parent="RigidBody" instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63, 0 )
shape = SubResource( 1 )

[node name="AudioClick" type="AudioStreamPlayer3D" parent="RigidBody"]
stream = ExtResource( 4 )
unit_size = 3.0
bus = "SFX"

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 0
collision_mask = 3

[node name="Base" parent="StaticBody" instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.17061, 0 )
collision_layer = 0
collision_mask = 18

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Area" to="RigidBody" method="_on_contact_entered"]
[connection signal="body_exited" from="Area" to="RigidBody" method="_on_contact_exited"]

[editable path="RigidBody/Clicker"]
